more fixes for broken styles

--- a/_sass/j/buttons.scss
+++ b/_sass/j/buttons.scss
@@ -37,7 +37,7 @@
     &,
     &:focus,
     &:hover {
-      background-color: white;
+      background-color: black;
       color: $brand-primary;
     }
     &:hover {
