--- a/_sass/j/type.scss
+++ b/_sass/j/type.scss
@@ -62,7 +62,7 @@ b, strong{
 
 a{
   text-decoration: none;
-  color: #a80000;
+  color: #ffc0cb;
 
   &:hover,
   &:focus {
